tests/invalidTest/typeConvert/test_sint128_1.q
# EXPECT type cannot be converted
def uint16 test(){
     sint128 var0 = 170141183460469231731687303715884105728     #def & constant num
  return 0
}

